2013-02-28  Sergio Martin <sergio.martin@artica.es>

	* include/functions_io.php
	include/functions_ui.php
	include/functions_reporting.php
	general/logon_ok.php: Improve the main screen putting the 
	last activity in left column, adding icons and improving titles

	* godmode/massive/massive_add_alerts.php
	godmode/massive/massive_copy_modules.php
	godmode/massive/massive_delete_agents.php
	godmode/massive/massive_enable_disable_alerts.php
	godmode/massive/massive_delete_profiles.php
	godmode/massive/massive_edit_agents.php
	godmode/massive/massive_delete_action_alerts.php
	godmode/massive/massive_add_profiles.php
	godmode/massive/massive_delete_alerts.php
	godmode/massive/massive_edit_modules.php
	godmode/massive/massive_standby_alerts.php
	godmode/massive/massive_add_action_alerts.php: Fix typo in
	logger actions

2013-02-28 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_reporting.php: into the function
	"reporting_get_agents_detailed_event" readded the code lost from the
	merge from the branch pandora_4.

2013-02-28 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_config.php, include/functions_io.php: fixed the
	update the config without enterprise version.
	
	Fixes: #3606331

2013-02-28 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_reporting.php: fixed php warning message when
	calculate the server healty without servers.

2013-02-28 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_config.php: added code to set the config options
	for the history actions.
	
	Fixes: #3606285
	
	* include/functions_api.php: improved the source code style.

2013-02-27  Sergio Martin <sergio.martin@artica.es>

	* include/functions_config.php: Include a library in
	functions config to avoid error in GD graphs

2013-02-27  Sergio Martin <sergio.martin@artica.es>

	* include/functions_html.php
	include/styles/pandora.css
	include/functions_graph.php
	include/graphs/functions_pchart.php
	include/functions_reporting.php