@@ -199,7 +199,7 @@ if (check_acl ($config['id_user'], 0, "AR")) {
 		if ($own_info['is_admin'] || check_acl ($config['id_user'], 0, "PM"))
 			$own_groups = array_keys(users_get_groups($config['id_user'], "IR"));
 		else
-			$own_groups = array_keys(users_get_groups($config['id_user'], "IR", false));		
+			$own_groups = array_keys(users_get_groups($config['id_user'], "IR", false));
 		
 		foreach ($gisMaps as $gisMap) {
 			$is_in_group = in_array($gisMap['group_id'], $own_groups);
